[package]
name = "xo-sd-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_dyn_templates = {  version = "0.2.0", features = ["handlebars"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
once_cell = "1.19.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"